Villanova_Dev1/src/objects/SFDC_Vendor_Partner__c.object
<CustomObject>
    <description>This object is used to vendors that provide services and products to be used at the Special Events.</description>
    <fields>
        <fullName>Account_Numbe__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conglomerate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor/Partner</label>
    <listViews>
        <fullName>AllPartners</fullName>
        <columns>NAME</columns>
        <columns>Industry__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>All Partners</label>
    </listViews>
    <listViews>
        <fullName>AllVendors</fullName>
        <columns>NAME</columns>
        <columns>Industry__c</columns>
        <columns>Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>All Vendors</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors/Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>